--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,8 @@
 baseurl = "https://wakan.github.io/blog/"
 languageCode = "fr-FR"
 title = "WaKaN's blog"
+
+[taxonomies]
+tag = "tags"
+category = "categories"
+series = "series"
