add youtube html

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseurl = "https://wakan.github.io/blog/"
 languageCode = "fr-FR"
 title = "WaKaN's blog"
+theme = "hugo_theme_robust"
 
 [taxonomies]
 tag = "tags"
