deploy on wakan repo

--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ deploy:
   steps:
     - install-packages:
         packages: git ssh-client
-    - lukevivier/gh-pages@0.2.1:
+    - wakan/blog@0.2.1:
         token: $GIT_TOKEN
         domain: wakan.github.io
         basedir: public
