--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ deploy:
   steps:
     - install-packages:
         packages: git ssh-client
-    - gh-pages:
+    - lukevivier/gh-pages:
         token: $GIT_TOKEN
         basedir: public
         
