add repo in wercker.yml

--- a/wercker.yml
+++ b/wercker.yml
@@ -10,5 +10,6 @@ deploy:
         packages: git ssh-client
     - lukevivier/gh-pages:
         token: $GIT_TOKEN
+        repo: wakan/blog
         basedir: public
         
