--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,13 @@
 box: debian
 build:
   steps:
+    - script:
+        name: initialize and update git submodules
+        code: |
+            git submodule init
+            git submodule update --remote --recursive
     - arjen/hugo-build:
-        version: "0.14"
+        #version: "0.14"
         flags: --buildDrafts=true
 deploy:
   steps:
