activation du theme academic

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://wakan.github.io/blog/"
 languageCode = "fr-FR"
 title = "WaKaN's blog"
-theme = "hugo_theme_robust"
+theme = "academic"
 
 [taxonomies]
 tag = "tags"
