--- a/config.toml
+++ b/config.toml
@@ -57,18 +57,13 @@ link = "//github.com/wakan"
   weight = 3
 
 [[menu.main]]
-  name = "Projects"
+  name = "Projets"
   url = "#projects"
   weight = 4
 
 [[menu.main]]
-  name = "Teaching"
-  url = "#teaching"
-  weight = 5
-
-[[menu.main]]
   name = "Contact"
   url = "#contact"
-weight = 6
+weight = 5
 
 
