--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "academic"
 copyright = "&copy; 2016 Guillaume Laurent"
 GoogleAnalytics = "UA-69672150-1"
 # Enable comments by entering your Disqus shortname
-DisqusShortname = "wakan"
+DisqusShortname = "wakanpowa"
 
 
 [taxonomies]
