--- a/wercker.yml
+++ b/wercker.yml
@@ -9,7 +9,7 @@ build:
             git submodule init
             git submodule update --remote --recursive
     - arjen/hugo-build:
-        version: "HEAD"
+        version: "0.17"
         flags: --buildDrafts=true
         disable_pygments: true
 deploy:
