--- a/wercker.yml
+++ b/wercker.yml
@@ -8,8 +8,7 @@ build:
         code: |
             git submodule init
             git submodule update --remote --recursive
-    - arjen/hugo-build@1.27.0:
-        version: "HEAD"
+    - arjen/hugo-build:
         flags: --buildDrafts=true
         disable_pygments: true
 deploy:
