--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ copyright = "&copy; 2018 Guillaume Laurent"
 GoogleAnalytics = "UA-104313067-1"
 # Enable comments by entering your Disqus shortname
 DisqusShortname = "wakanpowa"
+enableRobotsTXT = true
 
 
 [taxonomies]
