--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,11 @@
 baseurl = "https://wakan.github.io/blog/"
 languageCode = "fr-FR"
 title = "WaKaN's blog"
-enableGitInfo = true
-theme = "hyde-hyde"
-copyright = "&copy; 2018 Guillaume Laurent"
+theme = "academic"
+copyright = "&copy; 2017 Guillaume Laurent"
 GoogleAnalytics = "UA-104313067-1"
 # Enable comments by entering your Disqus shortname
 DisqusShortname = "wakanpowa"
-enableRobotsTXT = true
 
 
 [taxonomies]
@@ -16,11 +14,38 @@ category = "categories"
 series = "series"
 
 
+
+[params]
+  name = "Guillaume Laurent"
+  role = "Architecte développeur .Net"
+  organization = "Hopps group"
+  avatar = "portrait.jpg"
+  email = "wakan_powa_s01@hotmail.fr"
+  address = "1330, avenue de la Lauzière, Europarc de Pichaury - Bât D5 - BP 30460, 13592 Aix-en-Provence"
+phone = "+33 7 60 41 36 03"
+
+
  date_format = "Mon 2 Jan 2006"
 
  math = false
 
 sharing = true
+
+[[params.social]]
+    icon = "envelope"
+    icon_pack = "fa"
+link = "mailto:wakan_powa_s01@hotmail.fr"
+
+[[params.social]]
+    icon = "twitter"
+    icon_pack = "fa"
+link = "//twitter.com/wakanpowa"
+
+[[params.social]]
+    icon = "github"
+    icon_pack = "fa"
+link = "//github.com/wakan"
+
 
 [[menu.main]]
   name = "Posts"
@@ -35,6 +60,3 @@ weight = 5
 
 [outputs]
 page = [ "HTML", "AMP" ] # if you want AMP enable.
-
-
-
