--- a/wercker.yml
+++ b/wercker.yml
@@ -9,6 +9,7 @@ build:
             git submodule init
             git submodule update --remote --recursive --merge
     - arjen/hugo-build:
+        version: "0.44"
         flags: --buildDrafts=true
         disable_pygments: true
 deploy:
