--- a/config.toml
+++ b/config.toml
@@ -14,37 +14,21 @@ category = "categories"
 series = "series"
 
 
-
 [params]
-  name = "Guillaume Laurent"
-  role = "Architecte développeur .Net"
-  organization = "Hopps group"
-  avatar = "portrait.jpg"
-  email = "wakan_powa_s01@hotmail.fr"
-  address = "1330, avenue de la Lauzière, Europarc de Pichaury - Bât D5 - BP 30460, 13592 Aix-en-Provence"
-phone = "+33 7 60 41 36 03"
-
-
+  description = "Un mix de glandouille, informatique, drone et Iles"
+  dateformat = "Jan 2, 2006" # Optional
+  # Fonts settings.
+  googlefonts = "https://fonts.googleapis.com/css?family=Lobster|Lato:400,700" # Optional, Include google fonts.
+  fontfamily = "Lato,YuGothic,'Hiragino Kaku Gothic Pro',Meiryo,sans-serif" # Optional, Override body font family.
+  logofontfamily = "Lobster, cursive" # Optional, Override logo font.
  date_format = "Mon 2 Jan 2006"
 
- math = false
-
-sharing = true
-
-[[params.social]]
-    icon = "envelope"
-    icon_pack = "fa"
-link = "mailto:wakan_powa_s01@hotmail.fr"
-
-[[params.social]]
-    icon = "twitter"
-    icon_pack = "fa"
-link = "//twitter.com/wakanpowa"
-
-[[params.social]]
-    icon = "github"
-    icon_pack = "fa"
-link = "//github.com/wakan"
+[params.author]
+  thumbnail = "img/wakan.jpg"
+  name = "WaKaN PoWa"
+  facebook = "//facebook.com/wakan"
+  twitter = "//twitter.com/wakanpowa"
+  github = "//github.com/wakan"
 
 [outputs]
 page = [ "HTML", "AMP" ] # if you want AMP enable.
