--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,7 @@ series = "series"
 [params.author]
   thumbnail = "img/wakan.jpg"
   name = "WaKaN PoWa"
+  description = "Microsoft fan"
   facebook = "//facebook.com/wakan"
   twitter = "//twitter.com/wakanpowa"
   github = "//github.com/wakan"
