--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://wakan.github.io/blog/"
+baseurl = "/"
 languageCode = "fr-FR"
 title = "WaKaN's blog"
 theme = "hugo_theme_robust"
@@ -6,7 +6,12 @@ copyright = "&copy; 2018 Guillaume Laurent"
 GoogleAnalytics = "UA-104313067-1"
 # Enable comments by entering your Disqus shortname
 DisqusShortname = "wakanpowa"
+canonifyURLs=false
+uglyurls=true
+relativeURLs=true
 
+[permalinks]
+  post = "/:title/"
 
 [taxonomies]
 tag = "tags"
