--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-#baseurl = "https://wakan.github.io/blog/"
-baseurl = "https://ipfs.io/ipns/Qmaf2Dqi17apQHrCBjFaVCn6qRjG1EN8wdDW12HqQsqLUW"
+baseurl = "https://wakan.github.io/blog/"
+#baseurl = "https://ipfs.io/ipns/Qmaf2Dqi17apQHrCBjFaVCn6qRjG1EN8wdDW12HqQsqLUW"
 languageCode = "fr-FR"
 title = "WaKaN's blog"
 theme = "hugo_theme_robust"
@@ -8,8 +8,7 @@ GoogleAnalytics = "UA-104313067-1"
 # Enable comments by entering your Disqus shortname
 DisqusShortname = "wakanpowa"
 canonifyURLs=false
-uglyurls=true
-relativeURLs=true
+  
 
 [permalinks]
   post = "/:title/"
