--- a/wercker.yml
+++ b/wercker.yml
@@ -9,7 +9,7 @@ build:
             git submodule init
             git submodule update --remote --recursive --merge
     - arjen/hugo-build:
-        baseurl = "https://wakan.github.io/blog/"
+        baseurl: "https://wakan.github.io/blog/"
         version: "0.44"
         flags: --buildDrafts=true
         disable_pygments: true
