--- a/wercker.yml
+++ b/wercker.yml
@@ -9,9 +9,8 @@ build:
             git submodule init
             git submodule update --remote --recursive --merge
     - arjen/hugo-build:
-        baseurl: "https://wakan.github.io/blog/"
         version: "0.44"
-        flags: --buildDrafts=true
+        flags: --buildDrafts=true --baseURL "https://wakan.github.io/blog/"
         disable_pygments: true
 deploy:
   steps:
