--- a/wercker.yml
+++ b/wercker.yml
@@ -1,22 +1,12 @@
 box: debian
 build:
   steps:
-    - install-packages:
-        packages: git ssh-client
-    - script:
-        name: initialize and update git submodules
-        code: |
-            git submodule init
-            git submodule update --remote --recursive --merge
-    - arjen/hugo-build:
-        version: "0.62.2"
-        flags: --buildDrafts=true --baseURL "https://wakan.github.io/blog/"
-        disable_pygments: true
+    - arjen/hugo-build: 
+        theme: my-theme 
+        flags: --buildDrafts=false
 deploy:
   steps:
-    - install-packages:
-        packages: git ssh-client
-    - lukevivier/gh-pages:
-        token: $GIT_TOKEN
-        repo: wakan/blog
-        basedir: public
+     uetchy/gh-pages: 
+      token: $GITHUB_TOKEN 
+      repo: wakan/blog
+      path: public
