--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@ box: debian
 build:
   steps:
     - arjen/hugo-build: 
-        theme: my-theme 
+        theme: rsimple 
         flags: --buildDrafts=false
 deploy:
   steps:
