--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = themes/hyde-hyde
 	url = https://github.com/htr3n/hyde-hyde.git
 	
+[submodule "themes/ananke"]
+	path = themes/ananke
+	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
