--- a/wercker.yml
+++ b/wercker.yml
@@ -6,6 +6,6 @@ build:
 deploy:
   steps:
      uetchy/gh-pages: 
-      token: $GITHUB_TOKEN 
+      token: $GIT_TOKEN 
       repo: wakan/wakan.github.io
       path: public
