--- a/wercker.yml
+++ b/wercker.yml
@@ -5,7 +5,7 @@ build:
         flags: --buildDrafts=false
 deploy:
   steps:
-     uetchy/gh-pages: 
+    - uetchy/gh-pages: 
       token: $GIT_TOKEN 
       repo: wakan/wakan.github.io
       path: public
