--- a/wercker.yml
+++ b/wercker.yml
@@ -5,6 +5,8 @@ build:
         flags: --buildDrafts=false
 deploy:
   steps:
+    - install-packages:
+        packages: git
     - script:
         name: push to gh-pages
         code: |
