--- a/wercker.yml
+++ b/wercker.yml
@@ -10,9 +10,10 @@ deploy:
     - script:
         name: push to gh-pages
         code: |
+          rm -rf .git
+          git init
           git config --global user.email "wercker@yopmail.com"
           git config --global user.name "wercker"
-          git init
           git add .
           git commit -m "deploy from wercker"
           git push -f git@github.com:wakan/blog.git master:gh-pages
