on se place dans le repertoire public

--- a/wercker.yml
+++ b/wercker.yml
@@ -10,6 +10,7 @@ deploy:
     - script:
         name: push to gh-pages
         code: |
+          cd public
           rm -rf .git
           git init
           git config --global user.email "wercker@yopmail.com"
