--- a/wercker.yml
+++ b/wercker.yml
@@ -7,6 +7,12 @@ deploy:
   steps:
     - install-packages:
         packages: git
+    - add-to-known_hosts:
+        hostname: github.com
+        fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
+        type: rsa
+    - add-ssh-key:
+        keyname: WERCKER-BLOG
     - script:
         name: push to gh-pages
         code: |
