--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ deploy:
     - install-packages:
         packages: git
     - add-ssh-key:
-        keyname: WERCKER-BLOG
+        keyname: WERCKER_BLOG
     - script:
         name: push to gh-pages
         code: |
