--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,3 @@
-[submodule "themes/hugo_theme_robust"]
-	path = themes/hugo_theme_robust
-	url = https://github.com/dim0627/hugo_theme_robust.git
-[submodule "themes/academic"]
-	path = themes/academic
-	url = https://github.com/gcushen/hugo-academic.git
-[submodule "themes/hyde-hyde"]
-	path = themes/hyde-hyde
-	url = https://github.com/htr3n/hyde-hyde.git
-	
-[submodule "themes/ananke"]
-	path = themes/ananke
-	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
+[submodule "themes/rsimple"]
+	path = themes/rsimple
+	url = https://github.com/rijoth/rsimple.git
