--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,3 @@
-baseurl = "https://wakan.github.io/blog"
 baseURL = "https://wakan.github.io/blog"
 title = "WaKaN's blog"
 
@@ -33,7 +32,7 @@ paginate = 10
 
 [params]
   author = "wakan" # You can also set author in post front matter individually
-  subTitle = "A minimal Hugo theme."
+  subTitle = "Microsoft fan blog's."
   defaultTheme = "auto" # default theme when first visit (auto|dark|light)
 
   # Source URL of the website, will appear in the footer
@@ -61,12 +60,12 @@ paginate = 10
   showToc = true
 
   # Copyright
-  copyrightStartYear = "2021"
+  copyrightStartYear = "2016"
 
   # Open Graph & Twitter Card variables
   # You can also set description and images in post front matter individually
   description = "Un mix de glandouille, informatique, drone, iles et sutour des tests divers"
-  og = "/img/og.png" # This will use the image called og.png in static/img folder
+  og = "/img/wakan.jpg" # This will use the image called og.png in static/img folder
 
   # Posts shown in homepage
   mainSections = ["post"]
