search link in menu

--- a/config.toml
+++ b/config.toml
@@ -119,6 +119,10 @@ paginate = 10
     name = "Home"
     url = "/"
     weight = 1
+    [[menu.nav]]
+    name = "Search"
+    url = "/search/"
+    weight = 4
   [[menu.nav]]
     name = "RSS"
     url = "/index.xml"
