--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ enableEmoji = true
 enableRobotsTXT = true
 disableKinds = ["taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
+enableGitInfo = true
 
 ## Change this two to switch between different language
 languageCode = "fr"  # For RSS, view https://www.rssboard.org/rss-language-codes
