--- a/config.toml
+++ b/config.toml
@@ -1,22 +1,15 @@
 baseURL = "https://wakan.github.io/blog"
+defaultContentLanguage = "fr"  # For HTML page, now support: en, zh-hans, zh-hant, ja, nl, pl, it
+enableGitInfo = true
+languageCode = "fr"  # For RSS, view https://www.rssboard.org/rss-language-codes
+noChmod = true
+noTimes = true
+paginate = 21
+summaryLength = 200 # Custom summary length, add <!--more--> in post file to custom split point
+theme = "fuji"
+timezone = Europe/Paris
 title = "WaKaN's blog"
 
-theme = "fuji"
-hasCJKLanguage = true
-enableEmoji = true
-enableRobotsTXT = true
-disableKinds = ["taxonomy"]
-ignoreErrors = ["error-disable-taxonomy"]
-enableGitInfo = true
-
-## Change this two to switch between different language
-languageCode = "fr"  # For RSS, view https://www.rssboard.org/rss-language-codes
-defaultContentLanguage = "fr"  # For HTML page, now support: en, zh-hans, zh-hant, ja, nl, pl, it
-
-summaryLength = 100 # Custom summary length, add <!--more--> in post file to custom split point
-paginate = 10
-
-# googleAnalytics = "UA-000000000-0" # Set your Google Analytics UA here
 
 [outputFormats]
   [outputFormats.SearchIndex]
@@ -39,16 +32,6 @@ paginate = 10
   # Source URL of the website, will appear in the footer
   sourceURL = "https://github.com/wakan/blog"
 
-  # Use CloudFlare Workers to accelerate the Google Analytics
-  # If you are using this please comment the googleAnalytics above
-  # Check https://github.com/SukkaW/cloudflare-workers-async-google-analytics for more details
-  # googleAnalyticsTid = "UA-000000000-0"
-  # googleAnalyticsRoute = "https://*.*.workers.dev/"
-
-  # Google AdSense
-  # The AdSense code will be inserted between the head tags of your site.
-  # googleAdsense = "0000000000000000"
-
   # Word counter and read time indicator in post metadata
   showWordCounter = true
   showReadTime = true
@@ -60,7 +43,6 @@ paginate = 10
   showLicense = false
   showToc = true
 
-  # Copyright
   copyrightStartYear = "2016"
 
   # Open Graph & Twitter Card variables
