--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ noTimes = true
 paginate = 21
 summaryLength = 200 # Custom summary length, add <!--more--> in post file to custom split point
 theme = "fuji"
-timezone = Europe/Paris
+timezone = "Europe/Paris"
 title = "WaKaN's blog"
 
 
