--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,3 +9,6 @@ summaryLength = 200 # Custom summary length, add <!--more--> in post file to cus
 theme = "fuji"
 timezone = "Europe/Paris"
 title = "WaKaN's blog"
+
+[Ouputs]
+  home = ["HTML", "RSS", "AMP"]
