--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -1,9 +1,9 @@
-  [markup.goldmark]
+  [goldmark]
     [markup.goldmark.renderer]
       unsafe = true  # Enable user to embed HTML snippets in Markdown content
-  [markup.highlight]
+  [highlight]
     codeFences = false  # Disable Hugo's code highlighter
 
-  [markup.tableOfContents]
+  [tableOfContents]
     startLevel = 2
     endLevel = 3
