Revert "Changement de theme"
This reverts commit aab6cd2267ae61c424fd82a6db7873040f670d19.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,9 +2,11 @@ baseURL = "https://wakan.github.io/blog"
 defaultContentLanguage = "fr"  # For HTML page, now support: en, zh-hans, zh-hant, ja, nl, pl, it
 enableGitInfo = true
 languageCode = "fr"  # For RSS, view https://www.rssboard.org/rss-language-codes
+noChmod = true
+noTimes = true
 paginate = 21
 summaryLength = 200 # Custom summary length, add <!--more--> in post file to custom split point
-theme = "soho"
+theme = "fuji"
 timezone = "Europe/Paris"
 title = "WaKaN's blog"
 
