--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,11 +4,12 @@ enableGitInfo = true
 languageCode = "fr"  # For RSS, view https://www.rssboard.org/rss-language-codes
 noChmod = true
 noTimes = true
-paginate = 21
 summaryLength = 200 # Custom summary length, add <!--more--> in post file to custom split point
-theme = "fuji"
 timezone = "Europe/Paris"
 title = "WaKaN's blog"
 
 [ouputs]
   home = ["HTML", "RSS", "AMP"]
+
+[pagination]
+pagerSize = 21
