--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -1,13 +1,15 @@
-  [[nav]]
+  [[menus.main]]
     name = "Home"
-    url = "/"
-    weight = 1
-  [[nav]]
+    pageRef = "/"
+    weight = 10
+  [[menus.main]]
     name = "RSS"
-    url = "/index.xml"
-    weight = 5
+    pageRef = "/index.xml"
+    weight = 50
 
-  [[link]]
+  [[menus.main]]
     name = "GitHub"
     url = "https://github.com/wakan"
-    weight = 1
+    weight = 10
+    [menus.main.params]
+      rel = 'external'
