--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://wakan.github.io/blog"
 defaultContentLanguage = "fr"  # For HTML page, now support: en, zh-hans, zh-hant, ja, nl, pl, it
 enableGitInfo = true
-languageCode = "fr"  # For RSS, view https://www.rssboard.org/rss-language-codes
+languageCode = "fr-FR"  # For RSS, view https://www.rssboard.org/rss-language-codes
 noChmod = true
 noTimes = true
 summaryLength = 200 # Custom summary length, add <!--more--> in post file to custom split point
